--- a/style.css
+++ b/style.css
@@ -190,6 +190,8 @@ h1 {
 
 .proyecto {
   position: relative;
+  height: 260px;
+  width: 380px;
 }
 
 .proyecto:hover img {
@@ -237,7 +239,7 @@ h1 {
 .testimonio-imagen {
   height: 150px;
   width: 150px;
-  margin: 10px 10px 20px 10px;
+  margin: 10px 10px 10px 10px;
 }
 
 .testimonio-texto {
@@ -270,7 +272,7 @@ h1 {
 .contacto .container {
   max-width: 1100px;
   min-height: 200px;
-  padding: 20px;
+  padding: 18px;
 }
 
 .contacto .rectangulo {
